Use Codex colors to fix dark mode
Bug: T363776

--- a/resources/mmv/mmv.mixins.less
+++ b/resources/mmv/mmv.mixins.less
@@ -1,12 +1,10 @@
 // from https://stackoverflow.com/a/12178019/323407
 .fade-out-vertical( @backgroundColor: white ) {
-	@invisible: fadeout( @backgroundColor, 100% );
-	background-image: linear-gradient( to bottom, @invisible 0%, @backgroundColor 100% ); // W3C
+	background-image: linear-gradient( to bottom, @background-color-transparent 0%, @backgroundColor 100% ); // W3C
 }
 
 .fade-out-horizontal( @backgroundColor: white ) {
-	@invisible: fadeout( @backgroundColor, 100% );
-	background-image: linear-gradient( to right, @invisible 0%, @backgroundColor 100% ); // W3C
+	background-image: linear-gradient( to right, @background-color-transparent 0%, @backgroundColor 100% ); // W3C
 }
 
 .rotate( @degrees: 45deg ) {
