--- a/resources/mmv/ui/mmv.ui.canvas.less
+++ b/resources/mmv/ui/mmv.ui.canvas.less
@@ -19,7 +19,7 @@
 		a,
 		a:visited {
 			cursor: pointer;
-			color: #3472e5;
+			color: @color-progressive;
 		}
 	}
 
