--- a/resources/mmv/ui/mmv.ui.download.dialog.less
+++ b/resources/mmv/ui/mmv.ui.download.dialog.less
@@ -26,7 +26,7 @@
 
 	.mw-mmv-dialog-down-arrow {
 		bottom: @metadatabar-above-fold-height + @progress-bar-height + 45px;
-		background-color: #f8f9fa;
+		background-color: @background-color-neutral;
 	}
 
 	.mw-mmv-dialog-warning {
