--- a/resources/mmv/ui/mmv.ui.progressBar.less
+++ b/resources/mmv/ui/mmv.ui.progressBar.less
@@ -4,7 +4,7 @@
 @progress-height: @progress-bar-height;
 
 .mw-mmv-progress {
-	background-color: #c8ccd1;
+	background-color: @background-color-disabled;
 	background-color: rgba( 221, 221, 221, 0.5 );
 	width: 100%;
 	height: @progress-height;
