--- a/resources/mmv/ui/mmv.ui.reuse.dialog.less
+++ b/resources/mmv/ui/mmv.ui.reuse.dialog.less
@@ -14,7 +14,7 @@
 	bottom: @metadatabar-above-fold-height + @progress-bar-height - 5px;
 
 	.mw-mmv-reuse-tabs {
-		@divider-color: #c8ccd1;
+		@divider-color: @background-color-disabled;
 		position: static;
 		box-shadow: none;
 		padding-bottom: 0; // OOUI override
